# The-Magic-Methods

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  dev-requirements.txt  manage.py  nixpacks.toml  requirements.txt  runtime.txt  tests.py
bot/: .env-example  README.md  discord_bot.py  pyproject.toml
code_stego/: README.md  pyproject.toml
code_stego/code_stego/: __init__.py  constants.py  decoder.py  encoder.py
config/: settings.py  urls.py
django-files/: Dockerfile  README.md  db.sqlite3  discord_bot.py  dummy.py  manage.py  pyproject.toml  requirements.txt
django-files/config/: settings.py  urls.py
django-files/mainapp/: api_views.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
django-files/mainapp/migrations/: 0001_initial.py
django-files/mainapp/templates/: about.html  base.html  decoder-result.html  encoder-result.html  index.html  result.html  stego.html
django-files/static/css/: bootstrap-icons.css  custom.css  imgupload.css  main.css  prism.css  tab.css
django-files/static/js/: imgupload.js  prism-python.min.js  prism.js  script.js  scrollspy.min.js  streams.js  sweetalert.min.js  sweetalert2.min.js
mainapp/: api_views.py  apps.py  discord_bot.py  urls.py  views.py
mainapp/templates/: about.html  base.html  decoder-result.html  encoder-result.html  index.html  stego.html  stenography.html
src/: decoder.py  encoder.py  utils.py
static/css/: custom.css  prism.css  tab.css
static/js/: script.js
staticfiles/css/: tab.css
staticfiles/js/: imgupload.js  script.js  streams.js
